--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/dabbour/.virtualenvs/cv/bin/python2.7"
+    "python.pythonPath": "/home/dabbour/.virtualenvs/cv/bin/python"
 }
